Solução do terceiro desafio

--- a/index.html
+++ b/index.html
@@ -6,8 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Desafio TypeScript</title>
     <script src="dist/desafio3.js" defer></script>
+
+    <title>DESAFIO TYPESCRIPT</title>   
 </head>
 <body>
-    <h1>DESAFIO TYPESCRIPT</h1>
+    <h4>Valor a ser adicionado: <input id="soma"> </h4>
+    <button id="atualizar-saldo">Atualizar saldo</button>
+    <button id="limpar-saldo">Limpar seu saldo</button>
+    <h1>"Seu saldo é: " <span id="campo-saldo"></span></h1>
 </body>
 </html>
